force-app/main/default/objects/proh__File__c/fields/gaid__Total_Adjustment_Record_Amount__c.field-meta.xml
<CustomField>
    <fullName>gaid__Total_Adjustment_Record_Amount__c</fullName>
    <description>Total adjustment record amount of the file.</description>
    <inlineHelpText>Total adjustment record amount of the file.</inlineHelpText>
    <label>Total Adjustment Record Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>