force-app/main/default/objects/proh__File__c/fields/gaid__Total_Adjustment_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>gaid__Total_Adjustment_Record_Count__c</fullName>
    <description>Total adjustment record count of the file.</description>
    <inlineHelpText>Total adjustment record count of the file.</inlineHelpText>
    <label>Total Adjustment Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>