force-app/main/default/objects/proh__File__c/fields/proh__Chatter_Feed_Item__c.field-meta.xml
<CustomField>
    <fullName>proh__Chatter_Feed_Item__c</fullName>
    <description>Originating Chatter Feed Item where the file is posted</description>
    <label>Chatter Feed Item</label>
    <length>18</length>
    <type>Text</type>
</CustomField>