force-app/main/default/objects/proh__File__c/fields/proh__Failed_Elements__c.field-meta.xml
<CustomField>
    <fullName>proh__Failed_Elements__c</fullName>
    <label>Failed Elements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>