force-app/main/default/objects/proh__File__c/fields/proh__File_Type__c.field-meta.xml
<CustomField>
    <fullName>proh__File_Type__c</fullName>
    <label>File Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>