force-app/main/default/objects/proh__File__c/fields/proh__Filename__c.field-meta.xml
<CustomField>
    <fullName>proh__Filename__c</fullName>
    <label>Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>