force-app/main/default/objects/proh__File__c/fields/proh__Format__c.field-meta.xml
<CustomField>
    <fullName>proh__Format__c</fullName>
    <label>Format</label>
    <length>30</length>
    <type>Text</type>
</CustomField>