force-app/main/default/objects/proh__File__c/fields/proh__Group_Identifier__c.field-meta.xml
<CustomField>
    <fullName>proh__Group_Identifier__c</fullName>
    <label>Group Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>