force-app/main/default/objects/proh__File__c/fields/proh__Hashcode__c.field-meta.xml
<CustomField>
    <fullName>proh__Hashcode__c</fullName>
    <label>Hashcode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>