force-app/main/default/objects/proh__File__c/fields/proh__Source__c.field-meta.xml
<CustomField>
    <fullName>proh__Source__c</fullName>
    <description>Indicator of the source of the filer. Values can be “Chatter”, “PaymentHub” or the name of a third party/channel.</description>
    <label>Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>