force-app/main/default/objects/proh__File__c/fields/proh__Total_elements__c.field-meta.xml
<CustomField>
    <fullName>proh__Total_elements__c</fullName>
    <label>Total elements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>