force-app/main/default/objects/proh__File__c/fields/proh__Total_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>proh__Total_Record_Count__c</fullName>
    <description>Total record count of the file.</description>
    <inlineHelpText>Total record count of the file.</inlineHelpText>
    <label>Total Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>