force-app/main/default/objects/proh__File__c/listViews/proh__All.listView-meta.xml
<ListView>
    <fullName>proh__All</fullName>
    <columns>NAME</columns>
    <columns>proh__Chatter_Feed_Item__c</columns>
    <columns>proh__Filename__c</columns>
    <columns>proh__Format__c</columns>
    <columns>proh__File_Type__c</columns>
    <columns>proh__Status__c</columns>
    <columns>proh__Total_elements__c</columns>
    <columns>proh__Successful_Elements__c</columns>
    <columns>proh__Failed_Elements__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>